# AI-Playground

./: .gitignore  README.md
ImageSearchEngine/: flask_app.py  main.py  pyproject.toml
ImageSearchEngine/templates/: index.html
MultiAgentSystem/: agent.py  streamlit_app.py
TextToSQL/: app.py  create_db.py
VoiceAIAssistant/: main.py
