[project]
name = "imagesearchengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "flask>=3.1.3",
    "pillow>=12.1.1",
    "qdrant-client>=1.17.0",
    "requests>=2.32.5",
    "sentence-transformers>=4.1.0,<5.0",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "transformers>=4.1.0,<5.0",
]
